[project]
name = "voice_bot"
version = "0.1.0"
description = "Discord bot for voice channel management and timers"
requires-python = ">=3.8"
dependencies = [
    "discord.py>=2.3.1",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]